--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,4 @@
+setuptools
 ninja
 pybind11
 
@@ -34,6 +35,8 @@ accelerate
 gradio
 fastapi
 uvicorn
+llvmlite>=0.39.0
+numba>=0.56.0
 rembg
 onnxruntime
 #gevent
